Bug 1473037 - Display contrast ratio for text nodes inside the accessibility infobar. r=pbro

MozReview-Commit-ID: 1KbcRG0bZA3

Differential Revision: https://phabricator.services.mozilla.com/D4954

UltraBlame original commit: 6bca826c27cf5f951069fe64617dc1e1e58a82ab

--- a/devtools/server/actors/highlighters.css
+++ b/devtools/server/actors/highlighters.css
@@ -5141,6 +5141,19 @@ accessible
 infobar
 -
 name
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
 {
 color
 :
@@ -5175,6 +5188,190 @@ accessible
 -
 infobar
 -
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
+.
+AA
+:
+after
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
+.
+AAA
+:
+after
+{
+color
+:
+#
+90E274
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
+.
+fail
+:
+after
+{
+color
+:
+#
+E57180
+;
+content
+:
+"
+"
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
+.
+AA
+:
+after
+{
+content
+:
+"
+AA
+\
+2713
+"
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
+.
+AAA
+:
+after
+{
+content
+:
+"
+AAA
+\
+2713
+"
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
 name
 :
 not
@@ -5182,20 +5379,26 @@ not
 :
 empty
 )
-{
-color
 :
-var
-(
 -
+moz
 -
-highlighter
+native
+-
+anonymous
+.
+accessible
 -
 infobar
 -
-color
+audit
+:
+not
+(
+:
+empty
 )
-;
+{
 border
 -
 inline
